[package]
name = "shallow-container"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
sscanf = "0.1"
nanoid = "0.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
tokio = { version = "1", features = ["full"] }

log = "0.4"
moe_logger = "0.2"

oci-spec = "0.5.1"
unshare = "0.7.0"

tar = "0.4"
flate2 = "1.0"